--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
     "python.linting.flake8Enabled": true,
     "python.linting.enabled": true,
     "python.linting.flake8Args": [
-        "--ignore=E501"
+        "--ignore=E501,F405"
     ],
     "autopep8.args": [
         "--igonre=501"
